2007-11-09  Matthieu Nottale  <nottale@gostai.com>

	Fix distcheck.
	* tests/Makefile.am: Add missing files to sources and CLEANFILES.

2007-11-09  Matthieu Nottale  <nottale@gostai.com>

	Test-suite in progress.
	* tests/Makefile.am: Generate dispatcher.
	* tests/checkfiles/removecallbacks.cc: New.
	* tests/checkfiles/values.cc: New.
	* tests/checkfiles: New.
	* tests/tests.cc: New.
	* tests/tests.hh: New.
	* tests/urbiping.cc: Remove.

2007-11-09  mefyl  <mefyl@lrde.epita.fr>

	Compile tests in tests/
	* tests: New. Tests directory.
	* Makefile.am: Add tests/ subir.
	* configure.ac: Register tests/Makefile.
	* tests/Makefile.am: New.
	* tests/urbiping.cc: New. Sample test.

2007-11-09  Matthieu Nottale  <nottale@gostai.com>

	change ':' to '<<' for channel tags.
	* src/liburbi/uabstractclient.cc,
	* src/liburbi/usyncclient.cc,
	* src/liburbi/uvar.cc: Here.

2007-11-09  Matthieu Nottale  <nottale@gostai.com>

	Update examples to 1.5 language syntax.
	* src/examples/urbiballtrackinghead.cc,
	* src/examples/urbibandwidth.cc,
	* src/examples/urbimirror.cc,
	* src/examples/urbiping.cc,
	* src/examples/urbirecord.cc,
	* src/examples/urbisound.cc,
	* src/examples/urbitalkie.cc: Use << instead of : in URBI code.

2007-11-09  Akim Demaille  <demaille@gostai.com>

	Beware of : -> <<.
	* src/examples/urbiimage.cc: Use << instead of :.
	* src/liburbi/usyncclient.cc: Space changes.

2007-11-06  Akim Demaille  <demaille@gostai.com>

	Macro style.
	* include/urbi/uabstractclient.hh: Use a simpler and more consitent
	style for macros.

2007-10-30  Akim Demaille  <demaille@gostai.com>

	Update PackageInfo use.
	* configure.ac: Set copyright info.
	* src/liburbi/package-info.cc, src/liburbi/uobject.cc: Adjust.

2007-10-30  Matthieu Nottale  <nottale@gostai.com>

	Fix UVALUE_OPERATORS macro.
	* src/liburbi/uobject/uvalue-common.cc: set type to DataType macro
	   parameter.

2007-10-29  Matthieu Nottale  <nottale@gostai.com>

	Fix inclusions problems.