@@ -1,3 +1,8 @@
+2007-11-12  Akim Demaille  <demaille@gostai.com>
+
+	Use check_PROGRAMS.
+	* tests/Makefile.am: not bin_PROGRAMS.
+
 2007-11-09  Matthieu Nottale  <nottale@gostai.com>
 
 	Fix distcheck.
